--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ReactJS website that consumes the bujo api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "npx webpack-dev-server"
   },
   "repository": {
     "type": "git",
