--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     ],
     "rules": {
       "comma-dangle": ["error", "always-multiline"],
-      "semi": ["error", "always"]
+      "semi": ["error", "always"],
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": "error"
     }
 }
