Specify react version to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,11 @@
         "plugin:react/recommended",
         "standard"
     ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
